fix icons not showing issue

--- a/src/index.css
+++ b/src/index.css
@@ -75,4 +75,8 @@ button:focus-visible {
   button:hover {
     background-color: var(--darkgreen);
   }
+
+  li {
+    list-style: none;
+  }
 }
